[tool.poetry]
name = "cml-conversion-helpers"
version = "0.1.0"
description = "Helper functions for converting data to the NHS CML schema format."
authors = ["Data Science Skilled team <datascience@nhs.net>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/nhsengland/cml-conversion-helpers"
packages = [{include = "cml_conversion_helpers", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.10, <4"
pyspark = "^3.5"
pyyaml = ">=6.0.3"
requests = ">=2.28.0"
cml-schemas = "^0.1.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0"
pytest-html = ">3.1.1"


[[tool.poetry.source]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
