[project]
name = "cml-conversion-helpers"
version = "0.4.1"
description = "Helper functions for converting data to the NHS CML schema format."
readme = "README.md"
requires-python = ">=3.10, <4"
license = { text = "MIT" }
authors = [
  { name = "Data Science Team", email = "datascience@nhs.net" }
]
dependencies = [
  "pyspark>=3.5,<4.0",
  "pandas>=1.5",
]

[project.urls]
Repository = "https://github.com/nhsengland/cml-conversion-helpers"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-html>3.1.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"
